# src/swagger.json
@@ -20,8 +20,14 @@
             "post": {
                 "sumary": "Cadastro de produtos",
                 "description": "Essa rota será responsável na criação de um novo produto",
-                "tags": ["Products"],
-                "security":[{"bearerAuth": []}],
+                "tags": [
+                    "Products"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -61,11 +67,13 @@
                 }
             }
         },
-        "/products/findByname":{
-            "get":{
+        "/products/findByname": {
+            "get": {
                 "description": "Busca pelo nome do produto",
                 "summary": "Busca de um produto pelo nome",
-                "tags": ["Products"],
+                "tags": [
+                    "Products"
+                ],
                 "parameters": [
                     {
                         "name": "name",
@@ -74,7 +82,90 @@
                         "required": true
                     }
                 ],
-                "responses":{
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Product"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/products/{id}": {
+            "get": {
+                "description": "Busca pelo id do produto",
+                "summary": "Busca de um produto pelo id",
+                "tags": [
+                    "Products"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id do produto para busca",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "aplication/json": {
+                                "schema": {
+                                    "type": "Object",
+                                    "$ref": "#/components/schemas/Product"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Alterar produto pelo id",
+                "summary": "Alterar produto pelo id",
+                "tags": [
+                    "Products"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id do produto para busca",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Product"
+                            },
+                            "examples": {
+                                "product": {
+                                    "value": {
+                                        "name": "Mouse Cabo",
+                                        "description": "Produdo com ótima qualidade",
+                                        "price": 74.20
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
                     "200": {
                         "description": "Ok",
                         "content": {
@@ -88,13 +179,12 @@
                     }
                 }
             }
-
         }
     },
     "components": {
         "schemas": {
             "Product": {
-                "type":"object",
+                "type": "object",
                 "properties": {
                     "name": {
                         "type": "string"
@@ -111,8 +201,8 @@
                 }
             }
         },
-        "securitySchemes":{
-            "bearerAuth":{
+        "securitySchemes": {
+            "bearerAuth": {
                 "type": "http",
                 "scheme": "bearer",
                 "bearerFormat": "JWT"
